<resources>
    <string name="app_name">BitFit</string>
    <string name="add_session">Add</string>
    <string name="add_exercise">Add</string>
    <string name="weight">weight</string>
    <string name="reps">reps</string>
    <string name="sets">sets</string>
    <string name="notes">notes</string>
    <string name="exercise">exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="sets_name">Sets</string>
    <string name="reps_name">Reps</string>
    <string name="weight_name">Weight in kgs</string>
    <string name="notes_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">Summary</string>
    <string name="average_exercises_per_session">Average Exercises per Session: %1$d</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_sessions">Sessions</string>
    <string name="date_placeholder">Date</string>
    <string name="session_name">Session Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_email">user@email.com</string>
    <string name="user_name">User Name</string>
</resources>