<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:layout_margin="4dp">

    <EditText
        android:id="@+id/exerciseNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/setsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sets_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
        android:id="@+id/repsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reps_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
</LinearLayout>